--- a/DonetCore.Test/DonetCore.Test.csproj
+++ b/DonetCore.Test/DonetCore.Test.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>ResearchNotes_Demo</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ConfigLab.CallContext\ConfigLab.CallContext.csproj" />
+  </ItemGroup>
 
 </Project>
